fix missing background on footer feedback block

--- a/app/assets/stylesheets/modules/footer.scss
+++ b/app/assets/stylesheets/modules/footer.scss
@@ -6,6 +6,7 @@
 
 .footer_feedback_form--wrapper {
 	border-top: 1px solid $teal-40;
+	background-color: white;
 	display: flex;
 	justify-content: center;
 	width: 100%;
